k8s/applications/adguard/base/adguard.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguard-home
  namespace: adguard
spec:
  serviceName: "adguard-headless"
  replicas: 2
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      terminationGracePeriodSeconds: 10
      tolerations:
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 30
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 30
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - adguard-home
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: adguard-home
        image: docker.io/adguard/adguardhome:v0.107.71@sha256:92929135ced2554aaf94706f766a98ad348f211df61b0704e2db7e8498cc00b7
        ports:
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 3000
          name: http-initial
        - containerPort: 80
          name: http
        volumeMounts:
        - name: adguard-data
          mountPath: /opt/adguardhome/work/
        - name: adguard-config
          mountPath: /opt/adguardhome/conf/
  volumeClaimTemplates:
  - metadata:
      name: adguard-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
      storageClassName: "proxmox-csi"
  - metadata:
      name: adguard-config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
      storageClassName: "proxmox-csi"
