k8s/applications/adguard/base/sync-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-sync
  namespace: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard-sync
  template:
    metadata:
      labels:
        app: adguard-sync
    spec:
      containers:
        - name: adguard-sync
          image: ghcr.io/bakito/adguardhome-sync:alpine-v0.8.2@sha256:4a7f4195b15c923f0a9338220d693665162aeea3b8d8a85709c84669382629c5
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
